--- a/cart-service.yaml
+++ b/cart-service.yaml
@@ -21,3 +21,8 @@ eureka:
 spring:
   application:
     name: cart-service
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
