--- a/discovery-service.yaml
+++ b/discovery-service.yaml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: discovery-service
+  zipkin:
+    base-url: http://192.168.99.100:9411/
 server:
   port: 8761
 eureka:
