--- a/gateway-service.yaml
+++ b/gateway-service.yaml
@@ -4,6 +4,8 @@ server:
 spring:
   application:
     name: gateway-service
+  zipkin:
+    base-url: http://192.168.99.100:9411/
   cloud:
     gateway:
       globalcors:
