--- a/cart-service.yaml
+++ b/cart-service.yaml
@@ -21,6 +21,8 @@ eureka:
 spring:
   application:
     name: cart-service
+  zipkin:
+    base-url: http://192.168.99.100:9411/
 management:
   endpoints:
     web:
