--- a/gateway-service.yaml
+++ b/gateway-service.yaml
@@ -8,15 +8,15 @@ spring:
     base-url: http://192.168.99.100:9411/
   cloud:
     gateway:
-#      globalcors:
-#        corsConfigurations:
-#          '[/**]':
-#            allowedOrigins: "http://localhost:3000"
-#            allowedMethods:
-#              - GET
-#              - POST
-#              - PUT
-#            allowedHeaders: "*"
+      globalcors:
+        corsConfigurations:
+          '[/**]':
+            allowedOrigins: "http://localhost:3505"
+            allowedMethods:
+              - GET
+              - POST
+              - PUT
+            allowedHeaders: "*"
       routes:
         - id: core-service
           uri: lb://core-service
