--- a/gateway-service.yaml
+++ b/gateway-service.yaml
@@ -11,7 +11,7 @@ spring:
       globalcors:
         corsConfigurations:
           '[/**]':
-            allowedOrigins: "http://localhost:3505"
+            allowedOrigins: "*"
             allowedMethods:
               - GET
               - POST
