--- a/gateway-service.yaml
+++ b/gateway-service.yaml
@@ -42,6 +42,15 @@ spring:
             - StripPrefix=1
             - PrefixPath=/market-auth
             - JwtAuthFilter
+        - id: auth-service-account-controller
+          uri: lb://auth-service
+          predicates:
+            - Path=/auth/account/**
+          filters:
+            - StripPrefix=1
+            - PrefixPath=/market-auth
+            - JwtAuthFilter
+            - NeedAuthenticationFilter
         - id: analytics-service
           uri: lb://analytics-service
           predicates:
