--- a/gateway-service.yaml
+++ b/gateway-service.yaml
@@ -42,6 +42,7 @@ spring:
             - StripPrefix=1
             - PrefixPath=/market-auth
             - JwtAuthFilter
+            - NeedAuthenticationFilter
         - id: analytics-service
           uri: lb://analytics-service
           predicates:
