--- a/gateway-service.yaml
+++ b/gateway-service.yaml
@@ -49,6 +49,7 @@ spring:
           filters:
             - StripPrefix=1
             - PrefixPath=/market-auth
+            - JwtAuthFilter
             - NeedAuthenticationFilter
         - id: analytics-service
           uri: lb://analytics-service
