--- a/gateway-service.yaml
+++ b/gateway-service.yaml
@@ -42,7 +42,7 @@ spring:
 #            - StripPrefix=1
 #            - PrefixPath=/market-auth
 #            - JwtAuthFilter
-        - id: auth-service-account
+        - id: auth-service
           uri: lb://auth-service
           predicates:
             - Path=/auth/account/**
