--- a/gateway-service.yaml
+++ b/gateway-service.yaml
@@ -45,7 +45,7 @@ spring:
         - id: auth-service
           uri: lb://auth-service
           predicates:
-            - Path=/auth/account/**
+            - Path=/auth/**
           filters:
             - StripPrefix=1
             - PrefixPath=/market-auth
