--- a/gateway-service.yaml
+++ b/gateway-service.yaml
@@ -43,14 +43,14 @@ spring:
             - PrefixPath=/market-auth
             - JwtAuthFilter
             - NeedAuthenticationFilter
-#        - id: auth-service
-#          uri: lb://auth-service
-#          predicates:
-#            - Path=/auth/**
-#          filters:
-#            - StripPrefix=1
-#            - PrefixPath=/market-auth
-#            - JwtAuthFilter
+        - id: auth-service
+          uri: lb://auth-service
+          predicates:
+            - Path=/auth/**
+          filters:
+            - StripPrefix=1
+            - PrefixPath=/market-auth
+            - JwtAuthFilter
         - id: analytics-service
           uri: lb://analytics-service
           predicates:
