--- a/gateway-service.yaml
+++ b/gateway-service.yaml
@@ -21,6 +21,24 @@ spring:
         - id: core-service
           uri: lb://core-service
           predicates:
+            - Path=/core/{segment}/{segment}/orders/{segment}
+          filters:
+            - StripPrefix=1
+            - PrefixPath=/market-core
+            - JwtAuthFilter
+            - NeedAdminRoleFilter
+        - id: core-service
+          uri: lb://core-service
+          predicates:
+            - Path=/core/{segment}/{segment}/orders/**
+          filters:
+            - StripPrefix=1
+            - PrefixPath=/market-core
+            - JwtAuthFilter
+            - NeedAuthenticationFilter
+        - id: core-service
+          uri: lb://core-service
+          predicates:
             - Path=/core/**
           filters:
             - StripPrefix=1
@@ -34,10 +52,28 @@ spring:
             - StripPrefix=1
             - PrefixPath=/market-cart
             - JwtAuthFilter
+        - id: auth-service-account-subscribers
+          uri: lb://auth-service
+          predicates:
+            - Path=/auth/{segment}/{segment}/account/subscribers
+          filters:
+            - StripPrefix=1
+            - PrefixPath=/market-auth
+            - JwtAuthFilter
+            - NeedAdminRoleFilter
         - id: auth-service-account
           uri: lb://auth-service
           predicates:
-            - Path=/auth/{segment}/**
+            - Path=/auth/{segment}/{segment}/account/**
+          filters:
+            - StripPrefix=1
+            - PrefixPath=/market-auth
+            - JwtAuthFilter
+            - NeedAuthenticationFilter
+        - id: auth-service-account
+          uri: lb://auth-service
+          predicates:
+            - Path=/auth/{segment}/{segment}/registration/confirm-email
           filters:
             - StripPrefix=1
             - PrefixPath=/market-auth
