--- a/gateway-service.yaml
+++ b/gateway-service.yaml
@@ -21,7 +21,7 @@ spring:
         - id: core-service
           uri: lb://core-service
           predicates:
-            - Path=/core/{segment}/orders/
+            - Path=/core/api/v1/orders/{segment}
           filters:
             - StripPrefix=1
             - PrefixPath=/market-core
@@ -30,7 +30,7 @@ spring:
         - id: core-service
           uri: lb://core-service
           predicates:
-            - Path=/core/{segment}/orders/**
+            - Path=/core/api/v1/orders/**
           filters:
             - StripPrefix=1
             - PrefixPath=/market-core
@@ -55,7 +55,7 @@ spring:
         - id: auth-service-account-subscribers
           uri: lb://auth-service
           predicates:
-            - Path=/auth/{segment}/account/subscribers
+            - Path=/auth/api/v1/account/subscribers
           filters:
             - StripPrefix=1
             - PrefixPath=/market-auth
@@ -64,7 +64,7 @@ spring:
         - id: auth-service-account
           uri: lb://auth-service
           predicates:
-            - Path=/auth/{segment}/account/**
+            - Path=/auth/api/v1/account/**
           filters:
             - StripPrefix=1
             - PrefixPath=/market-auth
@@ -73,7 +73,7 @@ spring:
         - id: auth-service-account
           uri: lb://auth-service
           predicates:
-            - Path=/auth/{segment}/registration/confirm-email
+            - Path=/auth/api/v1/registration/confirm-email
           filters:
             - StripPrefix=1
             - PrefixPath=/market-auth
