--- a/auth-service.yaml
+++ b/auth-service.yaml
@@ -15,6 +15,8 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
   application:
     name: auth-service
+  zipkin:
+    base-url: http://192.168.99.100:9411/
 kafka:
   server: "192.168.99.100:9092"
   producer: "auth-service"
