--- a/gateway-service.yaml
+++ b/gateway-service.yaml
@@ -56,8 +56,8 @@ spring:
             - PrefixPath=/market-core
             - JwtAuthFilter
             - NeedAdminRoleFilter
-        - id: core-service
-          uri: lb://core-service-another
+        - id: core-service-another
+          uri: lb://core-service
           predicates:
             - Path=/core/**
           filters:
